Crop Node changes values during animation rendering #44494

Closed
opened 2015-04-23 11:12:26 +02:00 by paul geraskin · 9 comments
Member

System Information
linux kubuntu

Blender Version
2.74.2 buildbot

Short description of error
When i press render animation - CropNode changes values.
Here is the video: https://youtu.be/-T0hZuDmrCM
Here is the file: temp_crop.blend

Exact steps for others to reproduce the error
Open the file and press render. The crop node will change values

**System Information** linux kubuntu **Blender Version** 2.74.2 buildbot **Short description of error** When i press render animation - CropNode changes values. Here is the video: https://youtu.be/-T0hZuDmrCM Here is the file: [temp_crop.blend](https://archive.blender.org/developer/F166208/temp_crop.blend) **Exact steps for others to reproduce the error** Open the file and press render. The crop node will change values
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @PaulGeraskin

Added subscriber: @PaulGeraskin
Author
Member

Possibly this is because rendering output is set to 50%...

Possibly this is because rendering output is set to 50%...

Added subscriber: @Psy-Fi

Added subscriber: @Psy-Fi

Confirmed, let me investigate a little

Confirmed, let me investigate a little
Antonis Ryakiotakis self-assigned this 2015-04-23 13:37:28 +02:00

This issue was referenced by bcac112dde

This issue was referenced by bcac112dde72a82180ed26d1fddea08766a0a788

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit bcac112dde.

Closed by commit bcac112dde.
Author
Member

Thank a lot!

Thank a lot!
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#44494
No description provided.